Fixed list dark mode color

--- a/themes/pisoc-minimal/static/css/dark.css
+++ b/themes/pisoc-minimal/static/css/dark.css
@@ -23,6 +23,7 @@ p {
     color: #a0a2a5;
 }
 
+
 /*footer*/
 
 .copyright {
@@ -113,4 +114,8 @@ img {
 
 th {
     text-align: center !important;
+}
+
+li {
+	color: gray !important;
 }
